--- a/css/components/input.css
+++ b/css/components/input.css
@@ -24,6 +24,7 @@ input::placeholder, textarea::placeholder{
     font-size: 1em;
     line-height: 1;
     text-decoration: none;
+    text-transform: uppercase;
     letter-spacing: 0.05em; 
     color: var(--text-color-60); 
     margin: 0;
