--- a/css/components/preloader.css
+++ b/css/components/preloader.css
@@ -4,20 +4,22 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--background); /* Черный полупрозрачный фон */
+    background: var(--background);
     display: flex;
+    flex-direction: column;
+    gap: 50px;
     justify-content: center;
     align-items: center;
-    z-index: 9999; /* Убедитесь, что прелоадер поверх всего */
+    z-index: 9999; 
 }
 
 .loader {
-    border: 8px solid #f3f3f3; /* Светлый цвет */
-    border-top: 8px solid #3498db; /* Цвет вращающейся части */
+    border: 8px solid var(--background-60); 
+    border-top: 8px solid var(--help); 
     border-radius: 50%;
-    width: 50px; /* Ширина прелоадера */
-    height: 50px; /* Высота прелоадера */
-    animation: spin 1s linear infinite; /* Анимация вращения */
+    width: 50px; 
+    height: 50px; 
+    animation: spin 0.5s linear infinite;
 }
 
 @keyframes spin {
