feat: add change theme

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body{
     color: var(--text-color);
     margin: 0 auto;
     padding: 0;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 a{
