--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@ header{
     position: absolute;
 }
 
-
+header p, header a, header button{
+    color: var(--hedaer-index) !important;
+}
 
 /*---   section     preview   ---*/
 
@@ -42,6 +44,7 @@ header{
     line-height: 30px;
     max-width: 290px;
     white-space: nowrap;
+    color: var(--hedaer-index) !important;
 }
 
 .preview a span{
@@ -82,6 +85,7 @@ header{
     transform: translateX(-50%);
     position: absolute;
     opacity: 0.8;
+    color: var(--hedaer-index) !important;
 }
 
 @media(max-width: 768px){
