--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body{
     background-color: var(--background);
     color: var(--text-color);
     margin: 0 auto;
-    padding: 0 auto;
+    padding: 0;
     transition: background-color 0.3s, color 0.3s;
     max-width: 1440px;
 }
