--- a/css/components/header.css
+++ b/css/components/header.css
@@ -5,7 +5,10 @@ header{
     align-items: center;
     padding: 0 100px;
     box-sizing: border-box;
-    max-width: 1440px;;
+    max-width: 1440px;
+    overflow-x: clip;
+    z-index: 1;
+    position: relative;
 }
 
 nav{
@@ -73,8 +76,55 @@ nav >button{
    transform: translateX(0px);
 }
 
+
+.menu{
+    position: absolute;
+    z-index: 10000;
+    width: 300px;
+    top: 100px;
+    right: -320px;
+    transition: all 0.5s ease-out;
+    background-color: var(--background);
+    border: 1px solid var(--help);
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 25px 20px;
+    align-items: center;
+    gap: 15px;
+}
+
+.menu >p{
+    margin-bottom: 15px;
+}
+
+.menu.active{
+    right: 0px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
+    z-index: 9999; /* Убедитесь, что он под меню, но над остальными элементами */
+    display: none; /* Скрыт по умолчанию */
+}
+
+.overlay.active {
+    display: block; /* Показывать, когда меню открыто */
+}
+
+.no-scroll {
+    overflow: hidden; /* Запрет прокрутки */
+}
+
+
+
 @media(max-width: 1039px){
-    nav a:nth-of-type(2), a:nth-of-type(3), a:nth-of-type(4), a:nth-of-type(5){
+    nav >a:nth-of-type(2), nav >a:nth-of-type(3), nav >a:nth-of-type(4), nav >a:nth-of-type(5){
        display: none;
     }
 
